new proj/src/objects/GE_PRM_Appointment__c.object
<CustomObject>
    <description>PRM Object</description>
    <fields>
        <fullName>CM_Cycle_Time__c</fullName>
        <formula>DATEVALUE(GE_PRM_Application_Approved_Date__c) - GE_PRM_Recommendation__r.GE_PRM_Commercial_Vetting__r.GE_PRM_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_3_Largest_Customers__c</fullName>
        <description>List your three largest customers, providing their names and annual sales volume in US dollars.</description>
        <inlineHelpText>List your three largest customers, providing their names and annual sales volume in US dollars.</inlineHelpText>
        <label>3 Largest Customers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_AFA_Compliance_Cycle_Time__c</fullName>
        <formula>if(GE_PRM_Risk_Score__c &lt; 16, 
( GE_PRM_Compliance_Accepted_Rejected_Date__c  -  GE_PRM_Risk_Score_Generated_Date__c ),
( GE_PRM_Compliance_Accepted_Rejected_Date__c  -  GE_PRM_KYC_Approved_Rejected_Date__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AFA Compliance Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_AFA_DOA_Cycle_Time__c</fullName>
        <formula>GE_PRM_DOA_Approved_Date__c  -  GE_PRM_DOA_Generated_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AFA DOA Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_AFA_KYC_Cycle_Time__c</fullName>
        <formula>GE_PRM_KYC_Approved_Rejected_Date__c  - GE_PRM_Risk_Score_Generated_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Risk Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_AFA_Pending_Days__c</fullName>
        <description>Shows Pending Days in numbers</description>
        <formula>IF(ISPICKVAL(GE_PRM_Status__c, &apos;Approved&apos;) , (GE_PRM_DOA_Approved_Date__c - GE_PRM_DOA_Generated_Date__c), (TODAY() - DATEVALUE(GE_PRM_DOA_Generated_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows Pending Days in numbers</inlineHelpText>
        <label>AFA Pending Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_AFA_Sig_Risk__c</fullName>
        <formula>if(GE_PRM_Risk_Score__c &gt; 15,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sig Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_AFA_Submitted_Cycle_Time__c</fullName>
        <formula>GE_PRM_Application_Submitted_Date__c  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AFA Submitted Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_AFA_Type__c</fullName>
        <description>Type of AFA for the new Express Design</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Express</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Abbrevation_Acronym__c</fullName>
        <inlineHelpText>Abbreviations/Acronyms Used</inlineHelpText>
        <label>Abbreviation/Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account associated with the Application</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appointment</relationshipLabel>
        <relationshipName>Appointment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Account_Number__c</fullName>
        <description>Account Number</description>
        <inlineHelpText>Account Number</inlineHelpText>
        <label>Account Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Account_Payable_Contact__c</fullName>
        <description>Accounts Payable Contact Information</description>
        <inlineHelpText>Provide the name, phone number and email address of your accounts payable contact.</inlineHelpText>
        <label>Accounts Payable Contact Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Account_Sales_Region__c</fullName>
        <formula>GE_PRM_Account_Name__r.GE_ES_Sales_Region__r.Name</formula>
        <label>Account Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Add_Due_Dilig_Approved_Date__c</fullName>
        <label>Additional Due Diligence Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Additional_Notes__c</fullName>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Addl_Due_Diligence_Cycle_Time__c</fullName>
        <formula>GE_PRM_Add_Due_Dilig_Approved_Date__c  - GE_PRM_Application_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Due Diligence Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Address_1__c</fullName>
        <description>Address</description>
        <inlineHelpText>Address 1</inlineHelpText>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Address_2__c</fullName>
        <description>Address 2</description>
        <inlineHelpText>Address 2</inlineHelpText>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Afa_Cycle_Time__c</fullName>
        <formula>IF( ISPICKVAL(GE_PRM_AFA_Type__c,&apos;&apos;), GE_PRM_Application_Approved_Date__c - GE_PRM_Application_Launched_Date__c,GE_PRM_Application_Approved_Date__c - CreatedDate )</formula>
        <label>Afa Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Afa_Risk_Score_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in PRM : To be set to true once the risk score for fast track afa is generated</description>
        <label>Afa Risk Score Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Affiliations_Page__c</fullName>
        <label>Affiliations Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Agreement_Type__c</fullName>
        <formula>TEXT(GE_PRM_Recommendation__r.GE_PRM_Agreement_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_App_Emp_convic_for_Felony_Ys__c</fullName>
        <description>If &quot;Yes&quot; , please provide the name, type and date of each conviction.</description>
        <inlineHelpText>If &quot;Yes&quot; , please provide the name, type and date of each conviction.</inlineHelpText>
        <label>If yes?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_App_Emp_convicted_for_Felony__c</fullName>
        <description>Has the company or any of its directors, officers or managers ever been convicted of a felony or other serious crime under U.S.A. or foreign law.</description>
        <inlineHelpText>Has the company or any of its directors, officers or managers ever been convicted of a felony or other serious crime under U.S.A. or foreign law?</inlineHelpText>
        <label>Any felony or crime?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_App_Involvd_as_Defendant_Govt_Inv__c</fullName>
        <description>Are there any  past, pending, or threatened litigation or government investigations that your business or its subsidiaries have been involved in as a defendant or plaintiff?</description>
        <inlineHelpText>Are there any  past, pending, or threatened litigation or government investigations that your business or its subsidiaries have been involved in as a defendant or plaintiff?</inlineHelpText>
        <label>Have or had any gov’t investigations?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_App_Regd_as_lobby_for_foreign_ent__c</fullName>
        <description>A lobbyist for a foreign entity with the Clerk of the U.S. House of Representatives?</description>
        <inlineHelpText>A Lobbyist for a Foreign Entity with the Clerk of the U.S. House of Representatives?</inlineHelpText>
        <label>App Regd as lobbyist for foreign entity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_App_involved_as_defend_Gov_Inv_Ys__c</fullName>
        <description>If &quot;Yes&quot; ,provide the type of litigation ,place filed ,date filed and outcome of each case.</description>
        <inlineHelpText>If &quot;Yes&quot;, provide the type of litigation or investigation, place filed, date filed and outcome of each case.</inlineHelpText>
        <label>If yes?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Appl_Emp_denied_sanc_by_US_Auth__c</fullName>
        <description>Has the company or any of its directors/officers, within last 5 years, had any contract or agreement cancelled, or its renewal denied, or faced any sanction, or has been investigated by any public authorities ?</description>
        <inlineHelpText>Has the company or any of its directors/officers, within last 5 years, had any contract or agreement cancelled, or its renewal denied, or faced any sanction, or has been investigated by any public authorities?</inlineHelpText>
        <label>Appl/Emp denied/sanctioned by US Auth</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicant_Branch_Offices__c</fullName>
        <description>Applicant&apos;s branch/representative offices</description>
        <inlineHelpText>Applicant&apos;s branch/representative offices</inlineHelpText>
        <label>Applicant Branch Offices</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicant_Contact_Name__c</fullName>
        <description>Applicant Contact Name</description>
        <inlineHelpText>Name</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicant_Email__c</fullName>
        <description>Applicant Email</description>
        <inlineHelpText>Email Address</inlineHelpText>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicant_Name__c</fullName>
        <inlineHelpText>The company’s full, unabbreviated legal name including Inc., LLC, etc.</inlineHelpText>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicant_Prior_Names__c</fullName>
        <description>Applicant Prior Names</description>
        <inlineHelpText>Previous Names Used</inlineHelpText>
        <label>Prior Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicant_Regd_as_Foreign_Agent__c</fullName>
        <description>A foreign agent with the U.S. Department of Justice?</description>
        <inlineHelpText>A Foreign Agent with the U.S. Department of Justice?</inlineHelpText>
        <label>Applicant Registered as Foreign Agent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicant_Registered_as_Broker__c</fullName>
        <description>A broker with the U.S. Department of State?</description>
        <inlineHelpText>A Broker with the U.S. Department of State?</inlineHelpText>
        <label>Applicant Registered as Broker</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicant_Sales_Department_Info__c</fullName>
        <description>Describe the Applicant&apos;s sales department - number, experience, and special qualifications (I.e., engineering degrees, etc.) of personnel.</description>
        <inlineHelpText>Describe the Applicant&apos;s sales department - number, experience, and special qualifications (I.e., engineering degrees, etc.) of personnel.</inlineHelpText>
        <label>Applicant Sales Department Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicant_Total_Potential_Sales__c</fullName>
        <description>Applicant Total Potential Sales/Turnover (USD Thousands)</description>
        <inlineHelpText>Applicant Total Potential Sales/Turnover (USD Thousands)</inlineHelpText>
        <label>Applicant Total Potential Sales (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicant_Website_Address__c</fullName>
        <description>Applicant Website address</description>
        <inlineHelpText>Website Address</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Application_Approved_Date__c</fullName>
        <label>Application Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Application_Launched_Date__c</fullName>
        <label>Application Launched Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Application_Submitted_Date__c</fullName>
        <label>Application Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicnt_Emp_in_Denied_Party_List__c</fullName>
        <description>Has the Applicant or any of it&apos;s Owners, Officers, Directors, or employees ever been listed on a denied parties or watch list published or issued by any government agency responsible for export or import compliance/enforcement?*</description>
        <inlineHelpText>Has the Applicant or any of it&apos;s Owners, Officers, Directors, or employees ever been listed on a denied parties or watch list published or issued by any government agency responsible for export or import compliance/enforcement?*</inlineHelpText>
        <label>Applicant/Emplyoee in Denied Party List</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicnt_or_Emp_Barred_Import_Exp__c</fullName>
        <description>Has the company or any of it&apos;s Owners, Officers, Directors, or employees ever been disbarred, suspended, denied or had your privileges to export or import revoked by any government agency responsible for export or import compliance/enforcement?</description>
        <inlineHelpText>Has the company or any of it&apos;s owners, officers, directors, or employees ever been disbarred, suspended, denied or had your privileges to export or import revoked by any government agency responsible for export or import compliance or enforcement?</inlineHelpText>
        <label>Applicant/Employees Barred Import Export</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Appointment_Owner__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Appointment_Type__c</fullName>
        <formula>IF(AND( ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Type__c, &apos;New&apos;),GE_PRM_Risk_Score__c&lt;=15),&apos;New Low Risk&apos;, 
IF(AND( ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Type__c, &apos;New&apos;),GE_PRM_Risk_Score__c&gt;15),&apos;New Significant Risk&apos;,
IF(AND( ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Type__c, &apos;Renewal&apos;),GE_PRM_Risk_Score__c&gt;15),&apos;Renew Significant Risk&apos;,
IF(AND( ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Type__c, &apos;Renewal&apos;),GE_PRM_Risk_Score__c&lt;=15),&apos;Renew Low Risk&apos;,
IF(ISPICKVAL( GE_PRM_Recommendation__r.GE_PRM_Agreement_Type__c , &apos;New Product Line/Service&apos;), &apos;New Product&apos;,&apos;no match&apos;
)
)
)
)
)</formula>
        <label>Appointment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Approved_Appointment_Approvals__c</fullName>
        <label>Approved Appointment Approvals</label>
        <summaryFilterItems>
            <field>GE_PRM_Appointment_Approval__c.GE_PRM_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_PRM_Appointment_Approval__c.GE_PRM_Appointment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Attachments_Page__c</fullName>
        <label>Attachments Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Authorization_Page__c</fullName>
        <label>Authorization Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Authorization_to_Release_agreed__c</fullName>
        <label>Authorization to Release agreed</label>
        <picklist>
            <picklistValues>
                <fullName>I agree with the above statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I disagree with the above statement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Authorized_By_Title__c</fullName>
        <description>Title</description>
        <inlineHelpText>Title</inlineHelpText>
        <label>Authorized By Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Authorized_By__c</fullName>
        <description>Name</description>
        <inlineHelpText>Name</inlineHelpText>
        <label>Authorized By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Authorized_Date__c</fullName>
        <description>Date</description>
        <inlineHelpText>Date</inlineHelpText>
        <label>Authorized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Bank_Address__c</fullName>
        <description>Bank&apos;s Complete Legal Address</description>
        <inlineHelpText>Provide the street address and name, city, state, country and postal code.</inlineHelpText>
        <label>Bank’s Complete Legal Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Bank_Phone_Number__c</fullName>
        <description>Bank&apos;s Phone Number</description>
        <inlineHelpText>Bank&apos;s Phone Number</inlineHelpText>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Bankruptcy_in_Last_10_Years__c</fullName>
        <description>Has the company or any related entity filed for bankruptcy within the last ten years?</description>
        <inlineHelpText>Has the company or any related entity filed for bankruptcy within the last ten years?</inlineHelpText>
        <label>Bankruptcy in Last 10 Years</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Beneficiary_Bank_Name__c</fullName>
        <description>Bank&apos;s Name</description>
        <inlineHelpText>Bank&apos;s Name</inlineHelpText>
        <label>Beneficiary Bank&apos;s Name</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Branch_Location_Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Branch_Location__c</fullName>
        <label>Branch Location</label>
        <picklist>
            <picklistValues>
                <fullName>Due Diligence Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Information Provided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Branch_Office_Locations_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Branch Office Locations Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CM_Approved_Date__c</fullName>
        <label>CM Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CNTY_Authorized_To_Do_BIZ_In__c</fullName>
        <description>List the countries where the Applicant is licensed to do business</description>
        <inlineHelpText>List the countries where the Applicant is licensed to do business</inlineHelpText>
        <label>Countries Authorized to do Business In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Cert_Address_Sect_Cmplt_flag__c</fullName>
        <formula>IF(
AND(
GE_PRM_Cnfrm_Identity_Dtls__c=FALSE,
ISBLANK(GE_PRM_Partner_Comments__c)
),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsOrange&quot;, &quot;Orange&quot;, 25,25),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsGreen&quot;, &quot;Green&quot;, 25,25)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Certification_Agreed__c</fullName>
        <description>I Agree With This Statement</description>
        <inlineHelpText>I Agree With This Statement</inlineHelpText>
        <label>Certification Agreed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Certified_By_Title__c</fullName>
        <description>Title</description>
        <inlineHelpText>Title</inlineHelpText>
        <label>Certified By Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Certified_By__c</fullName>
        <description>Name</description>
        <inlineHelpText>Name</inlineHelpText>
        <label>Certifiied By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Certified_Date__c</fullName>
        <description>Date</description>
        <inlineHelpText>Date</inlineHelpText>
        <label>Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Channel_Manager_Actions_flag__c</fullName>
        <formula>IF( GE_PRM_Agreement_Type__c = &apos;New Product Line/Service&apos;,&apos;&apos;,
IF(
AND(
OR(ISPICKVAL(GE_PRM_Chnl_Mgr_Actns__c,&apos;Approved&apos;),ISPICKVAL(GE_PRM_Chnl_Mgr_Actns__c,&apos;&apos;)),
OR(ISPICKVAL(GE_PRM_Status__c,&apos;Submitted&apos;),
ISPICKVAL(GE_PRM_Status__c,&apos;Approved&apos;),
ISPICKVAL(GE_PRM_Status__c,&apos;Rejected&apos;),
ISPICKVAL(GE_PRM_Status__c,&apos;Archived&apos;))
),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsGreen&quot;, &quot;Green&quot;, 25,25),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsOrange&quot;, &quot;Orange&quot;, 25,25)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Channel_Manager_Comments__c</fullName>
        <description>Channel Manager Comments on the Application</description>
        <inlineHelpText>Channel Manager Comments on the Application</inlineHelpText>
        <label>Channel Manager Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Channel_Manager_Task_Date__c</fullName>
        <label>Channel Manager Task Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Channel_Mgr_Approval_Cycle_Time__c</fullName>
        <formula>GE_PRM_CM_Approved_Date__c - GE_PRM_Application_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Manager Approval Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Channel_Type__c</fullName>
        <description>Channel Type</description>
        <inlineHelpText>Current Status</inlineHelpText>
        <label>Channel Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Chnl_Mgr_Actns__c</fullName>
        <label>Channel Manager Action</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Information Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver Need More Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Clonable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To easily identify the last Approved Afa which should be the unique record clonable</description>
        <label>Clonable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Cloned_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Cnfrm_Identity_Dtls__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check box if all the information in the identity section is correct&apos;. If any changes 
need to be made, please enter the changes in the Partner Comments field 
below.</description>
        <inlineHelpText>Please check box if all the information in the identity section is correct. If any changes 
need to be made, please enter the changes in the &apos;If not Correct, Enter Changes&apos; field 
below.</inlineHelpText>
        <label>Confirm Address &amp; Identity are correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Compliance_Accepted_Rejected_Date__c</fullName>
        <label>Compliance Accepted/Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Compliance_Comments__c</fullName>
        <label>Compliance Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Compliance_Page__c</fullName>
        <label>Compliance Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Compliance_Sect_Cmplt_flag__c</fullName>
        <formula>IF(
OR(
ISPICKVAL(GE_PRM_Potential_Liabilities__c,&apos;&apos;),
ISPICKVAL(GE_PRM_App_Involvd_as_Defendant_Govt_Inv__c,&apos;&apos;),
ISPICKVAL(GE_PRM_App_Emp_convicted_for_Felony__c,&apos;&apos;)
),
IF(CONTAINS($Api.Partner_Server_URL_260,&apos;communities&apos;),IMAGE(&quot;/channelpartner/resource/1315699578000/RiskTopicSignalsOrange&quot;, &quot;Orange&quot;, 25,25),IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsOrange&quot;, &quot;Orange&quot;, 25,25)),
IF(CONTAINS($Api.Partner_Server_URL_260,&apos;communities&apos;),IMAGE(&quot;/channelpartner/resource/1315699578000/RiskTopicSignalsGreen&quot;, &quot;Green&quot;, 25,25),IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsGreen&quot;, &quot;Green&quot;, 25,25))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Compliance_Status__c</fullName>
        <label>Compliance Status</label>
        <picklist>
            <picklistValues>
                <fullName>Need More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Compliance_Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance Additional Info Provided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>